[package]
name = "hdmi-hpd-control"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.4", features = ["defmt", "time-driver", "critical-section-impl", "rp2040"] }
embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-futures = { version = "0.1" }

cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Optional: for USB functionality if needed later
# embassy-usb = { version = "0.4", features = ["defmt"] }

[profile.release]
debug = 2
lto = true
opt-level = "s"

[profile.dev]
debug = 2
lto = true
opt-level = "z"
